# privatecollection

./: Cargo.toml  README.md
assets/: pixel_art.wgsl
editor/: Cargo.toml
editor/src/: main.rs
game/: Cargo.toml
game/assets/: pixel_art.wgsl
game/assets/maps/: init.map
game/assets/models/: character.gltf  door.gltf  tree.glb  wall.gltf
game/src/: main.rs
map/: Cargo.toml
map/src/: lib.rs
src/: main.rs
