[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
map = { path = "../map" }
rfd = "0.11.4"
